Fix multiple p5diagram on reload + add text-align

--- a/html/rp.css
+++ b/html/rp.css
@@ -11,6 +11,7 @@
     margin: auto;
     margin-top: 5px;
     width: 100%;
+    text-align: center;
 }
 
 .rp-head-caption {
